--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,7 @@
 
 	// Use 'settings' to set *default* container specific settings.json values on container create.
 	// You can edit these settings after create using File > Preferences > Settings > Remote.
-	"runArgs": ["192.168.172.9", "--gpus=all", "--shm-size=8g"],
+	// "runArgs": ["192.168.172.9", "--gpus=all", "--shm-size=8g"],
 
 	// Add the IDs of extensions you want installed when the container is created in the array below.
 	"customizations": {
